Cleaned and reformatted the `Light Blocks` game.